--- a/springboot-ljqinit/pom.xml
+++ b/springboot-ljqinit/pom.xml
@@ -100,10 +100,10 @@
             <version>1.21</version>
         </dependency>
 <!--        mongodb-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 <!--        redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -194,6 +194,11 @@
             <artifactId>kotlin-test</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
         </dependency>
     </dependencies>
 
